src/objects/Outbound_Message_Deletion_Queue__c.object
<CustomObject>
    <description>CRM-MC-ESPSFDCQI-766</description>
    <fields>
        <fullName>LI_Id__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766</description>
        <label>LI Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_Mulesoft_Error_Message__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766 Error message from Mulesoft integration while syncing record from IQVIA to legacy IMS org</description>
        <inlineHelpText>Error message from Mulesoft integration while syncing record from IQVIA to legacy IMS org</inlineHelpText>
        <label>LI Mulesoft Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LI_Mulesoft_Sync_Status__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766 Field indicating status of Mulesoft sync from IQVIA org to legacy IMS org</description>
        <inlineHelpText>Field indicating status of Mulesoft sync from IQVIA org to legacy IMS org</inlineHelpText>
        <label>LI Mulesoft Sync Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LI_Mulesoft_Sync_Timestamp__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766 Timestamp indicating when record was successfully synced from IQVIA org to legacy IMS org via Mulesoft integration</description>
        <inlineHelpText>Timestamp indicating when record was successfully synced from IQVIA org to legacy IMS org via Mulesoft integration</inlineHelpText>
        <label>LI Mulesoft Sync Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LQ_Id__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766</description>
        <label>LQ Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LQ_Mulesoft_Error_Message__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766 Error message from Mulesoft integration while syncing record from IQVIA to legacy Quintiles org</description>
        <inlineHelpText>Error message from Mulesoft integration while syncing record from IQVIA to legacy Quintiles org</inlineHelpText>
        <label>LQ Mulesoft Error Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LQ_Mulesoft_Sync_Status__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766 Field indicating status of Mulesoft sync from IQVIA org to legacy Quintiles org</description>
        <inlineHelpText>Field indicating status of Mulesoft sync from IQVIA org to legacy Quintiles org</inlineHelpText>
        <label>LQ Mulesoft Sync Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LQ_Mulesoft_Sync_Timestamp__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766 Timestamp indicating when record was successfully synced from IQVIA org to legacy Quintiles org via Mulesoft integration</description>
        <inlineHelpText>Timestamp indicating when record was successfully synced from IQVIA org to legacy Quintiles org via Mulesoft integration</inlineHelpText>
        <label>LQ Mulesoft Sync Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MasterRecordId__c</fullName>
        <description>CRM-MC-ESPSFDCQI-1632 -</description>
        <label>MasterRecordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766</description>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>CRM-MC-ESPSFDCQI-3369</description>
        <label>Opportunity</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordID__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766</description>
        <label>RecordID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObjectType__c</fullName>
        <description>CRM-MC-ESPSFDCQI-766</description>
        <label>SObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outbound Message Deletion Queue</label>
    <nameField>
        <label>Outbound Message Deletion Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Message Deletion Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>